string concat fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 3.8.2)
+cmake_minimum_required(VERSION 3.12)
 
 set(CMAKE_CXX_STANDARD 99)
 
 FILE(GLOB SOURCES "*.c")
 FILE(GLOB HEADERS "*.h")
 
-ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${HEADERS} expression.c expression.h)
+ADD_EXECUTABLE(ifj ${SOURCES} ${HEADERS})
